--- a/cesi-zen-ionic/src/app/pages/exercices/exercice-list/exercice-list.page.html
+++ b/cesi-zen-ionic/src/app/pages/exercices/exercice-list/exercice-list.page.html
@@ -61,54 +61,58 @@
 
 
 <!-- exercice-list.page.html -->
-<ion-header class="ion-no-border">
-  <ion-toolbar>
-    <ion-title>
-      Respiration
-    </ion-title>
+<ion-header class="zen-header">
+  <ion-toolbar class="zen-toolbar">
+    <ion-title class="zen-title">Exercices de Respiration</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+<ion-content class="zen-container">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" class="zen-refresher">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <div class="header-container">
-    <h1>Exercices de Respiration</h1>
-    <p>La cohérence cardiaque est une technique de respiration qui permet de réguler votre rythme cardiaque et de réduire le stress. Choisissez un exercice pour commencer.</p>
+  <div class="header-section zen-fade-in">
+    <h1 class="zen-title">Respirez en Conscience</h1>
+    <p class="zen-subtitle">La cohérence cardiaque est une technique de respiration qui permet de réguler votre rythme cardiaque et de réduire le stress. Choisissez un exercice pour commencer.</p>
   </div>
 
-  <div *ngIf="error" class="error-container">
-    <ion-icon name="alert-circle-outline"></ion-icon>
-    <p>{{ error }}</p>
-    <ion-button (click)="loadExercises()">Réessayer</ion-button>
+  <div *ngIf="error" class="error-container zen-card">
+    <ion-icon name="alert-circle-outline" class="zen-icon"></ion-icon>
+    <p class="zen-text">{{ error }}</p>
+    <ion-button class="zen-button" (click)="loadExercises()">
+      Réessayer
+      <ion-icon name="refresh-outline" slot="end"></ion-icon>
+    </ion-button>
   </div>
 
   <ion-grid *ngIf="exercises.length > 0" class="exercise-grid">
     <ion-row>
       <ion-col size="12" size-md="6" size-lg="4" *ngFor="let exercise of exercises">
-        <ion-card class="exercise-card" (click)="startExercise(exercise.id)">
+        <ion-card class="exercise-card zen-card" (click)="startExercise(exercise.id)">
           <ion-card-header>
-            <ion-card-title>{{ exercise.name }}</ion-card-title>
+            <ion-card-title class="exercise-title">
+              <ion-icon name="leaf-outline" class="zen-icon"></ion-icon>
+              {{ exercise.name }}
+            </ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <div class="timing-container">
               <div class="timing">
-                <ion-icon name="arrow-up-outline"></ion-icon>
-                <span>{{ exercise.inspirationDuration }}s</span>
+                <ion-icon name="arrow-up-outline" class="timing-icon"></ion-icon>
+                <span class="timing-value">{{ exercise.inspirationDuration }}s</span>
               </div>
               <div class="timing" *ngIf="exercise.holdDuration > 0">
-                <ion-icon name="pause-outline"></ion-icon>
-                <span>{{ exercise.holdDuration }}s</span>
+                <ion-icon name="pause-outline" class="timing-icon"></ion-icon>
+                <span class="timing-value">{{ exercise.holdDuration }}s</span>
               </div>
               <div class="timing">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-                <span>{{ exercise.expirationDuration }}s</span>
+                <ion-icon name="arrow-down-outline" class="timing-icon"></ion-icon>
+                <span class="timing-value">{{ exercise.expirationDuration }}s</span>
               </div>
             </div>
-            <p class="description">{{ exercise.description }}</p>
-            <ion-button expand="block" class="start-button">
+            <p class="exercise-description">{{ exercise.description }}</p>
+            <ion-button expand="block" class="zen-button start-button">
               Commencer l'exercice
               <ion-icon name="play-outline" slot="end"></ion-icon>
             </ion-button>
@@ -118,8 +122,8 @@
     </ion-row>
   </ion-grid>
 
-  <div *ngIf="exercises.length === 0 && !error" class="empty-container">
-    <ion-spinner name="crescent"></ion-spinner>
-    <p>Chargement des exercices...</p>
+  <div *ngIf="exercises.length === 0 && !error" class="empty-container zen-card">
+    <ion-spinner name="crescent" class="zen-loading"></ion-spinner>
+    <p class="zen-text">Chargement des exercices...</p>
   </div>
 </ion-content>
