--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
       </div>
       <div class="col-lg-6 hero-image-container p-5" [@scaleIn]="'in'">
         <div class="zen-image-frame floating">
-          <img src="assets/meditation.png" alt="Méditation" class="hero-image">
+          <img [src]="meditationImagePath" alt="Méditation" class="hero-image">
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
       </div>
       <div class="col-lg-6 hero-image-container p-5">
         <div class="zen-image-frame floating">
-          <img src="assets/meditation.png" alt="Méditation" class="hero-image">
+          <img [src]="meditationImagePath" alt="Méditation" class="hero-image">
         </div>
       </div>
     </div>
